# sevilla

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
src/: c_api.cpp  c_api.h  csv_parser.cpp  csv_parser.h  csv_parser_c_api.cpp  email_client.cpp  email_client.h  email_client_c_api.cpp  http_client.cpp  http_client.h  http_client_c_api.cpp  utils.cpp  utils.h  utils_c_api.cpp
tests/: csv_parser_test.cpp  email_client_test.cpp  http_client_test.cpp  utils_c_api_test.cpp  utils_test.cpp
